--- a/.github/workflows/reminder.yml
+++ b/.github/workflows/reminder.yml
@@ -16,4 +16,4 @@ jobs:
         python-version: '3.8'
 
     - name: Hatırlatıcı Kodunu Çalıştır
-      run: python gjgjgjgreminder.py
+      run: python reminder.py
